--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "using-pre-built-react-components",
+  "name": "notes_website",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
